--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,16 @@
 .App {
   text-align: left;
+  font-family: "Work Sans", sans-serif;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 3vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
   background-color: #282c34;
+  font-family: "Changa", sans-serif;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -24,12 +20,18 @@
   color: white;
 }
 
+.List-body {
+  background-color: rgb(234, 233, 233);
+  margin: 5vh;
+  padding: 5vmin;
+}
+
 .App-link {
   color: #61dafb;
 }
 
 .strike {
-text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 @keyframes App-logo-spin {
