--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: left;
   font-family: "Work Sans", sans-serif;
+  background-color: #f4d03f;
+  background-image: linear-gradient(132deg, #f4d03f 0%, #16a085 100%);
+  height: 100vh;
 }
 
 .App-logo {
@@ -9,7 +12,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fff0b8;
+  background-image: linear-gradient(132deg, #fff0b8 0%, #aadad4 100%);
   font-family: "Changa", sans-serif;
   min-height: 10vh;
   display: flex;
@@ -17,21 +21,39 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .List-body {
-  background-color: rgb(234, 233, 233);
+  background-color: #fff0b8;
+  background-image: linear-gradient(132deg, #fff0b8 0%, #aadad4 100%);
   margin: 5vh;
   padding: 5vmin;
+  height: auto;
+}
+
+.btn-outline-secondary {
+  margin-top: 2vmin;
+  margin-bottom: 1vmin;
+}
+
+.progress {
+  margin-bottom: 2vmin;
+  height: 5vmin;
+  background-color: #dbede9;
+}
+
+.to-do-item {
+  margin-left: 1vmin;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.strike {
+.To-do-complete {
   text-decoration: line-through;
+  color: silver;
 }
 
 @keyframes App-logo-spin {
